force-app/main/default/objects/numm__Establishment__c/numm__Establishment__c.object-meta.xml
<CustomObject>
    <description>Objet des établissements</description>
    <label>Etablissement</label>
    <nameField>
        <label>Etablissement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Etablissements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>