force-app/main/default/objects/numm__Establishment__c/fields/numm__Actif__c.field-meta.xml
<CustomField>
    <fullName>numm__Actif__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Détermine si l&#39;établissement est actif (gestion de propriétaires)</description>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>