force-app/main/default/objects/numm__Establishment__c/fields/numm__Address02__c.field-meta.xml
<CustomField>
    <fullName>numm__Address02__c</fullName>
    <label>Adresse 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>