force-app/main/default/objects/numm__Establishment__c/fields/numm__Adress01__c.field-meta.xml
<CustomField>
    <fullName>numm__Adress01__c</fullName>
    <label>Adresse 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>