force-app/main/default/objects/numm__Establishment__c/fields/numm__Benefice__c.field-meta.xml
<CustomField>
    <fullName>numm__Benefice__c</fullName>
    <label>Bénéfice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>