force-app/main/default/objects/numm__Establishment__c/fields/numm__Capital__c.field-meta.xml
<CustomField>
    <fullName>numm__Capital__c</fullName>
    <formula>numm__Entity__r.numm__Capital__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>