force-app/main/default/objects/numm__Establishment__c/fields/numm__City__c.field-meta.xml
<CustomField>
    <fullName>numm__City__c</fullName>
    <description>Ville</description>
    <label>Ville</label>
    <length>50</length>
    <type>Text</type>
</CustomField>