force-app/main/default/objects/numm__Establishment__c/fields/numm__Code_Activit_NAF__c.field-meta.xml
<CustomField>
    <fullName>numm__Code_Activit_NAF__c</fullName>
    <label>Code Activité (NAF)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>