force-app/main/default/objects/numm__Establishment__c/fields/numm__Compte__c.field-meta.xml
<CustomField>
    <fullName>numm__Compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Compte de l&#39;établissement de type &#39;Propriétaire&#39;</description>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Etablissements</relationshipLabel>
    <relationshipName>Etablissements</relationshipName>
    <type>Lookup</type>
</CustomField>