force-app/main/default/objects/numm__Establishment__c/fields/numm__CompteBeneficePerte__c.field-meta.xml
<CustomField>
    <fullName>numm__CompteBeneficePerte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte Bénéfice/Perte</label>
    <referenceTo>numm__AccountingCode__c</referenceTo>
    <relationshipLabel>Etablissements</relationshipLabel>
    <relationshipName>Etablissements</relationshipName>
    <type>Lookup</type>
</CustomField>