force-app/main/default/objects/numm__Establishment__c/fields/numm__Country__c.field-meta.xml
<CustomField>
    <fullName>numm__Country__c</fullName>
    <description>Pays</description>
    <inlineHelpText>Pays</inlineHelpText>
    <label>Pays</label>
    <length>35</length>
    <type>Text</type>
</CustomField>