force-app/main/default/objects/numm__Establishment__c/fields/numm__Credit6__c.field-meta.xml
<CustomField>
    <fullName>numm__Credit6__c</fullName>
    <label>ZTODEL_Crédit 6</label>
    <summarizedField>numm__HeaderVoucher__c.numm__CreditEntiteEcritureGenerale6__c</summarizedField>
    <summaryForeignKey>numm__HeaderVoucher__c.numm__Etablissement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>