force-app/main/default/objects/numm__Establishment__c/fields/numm__Debit6__c.field-meta.xml
<CustomField>
    <fullName>numm__Debit6__c</fullName>
    <label>ZTODEL_Débit 6</label>
    <summarizedField>numm__HeaderVoucher__c.numm__DebitEntiteEcritureGenerale6__c</summarizedField>
    <summaryForeignKey>numm__HeaderVoucher__c.numm__Etablissement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>