force-app/main/default/objects/numm__Establishment__c/fields/numm__Debit7__c.field-meta.xml
<CustomField>
    <fullName>numm__Debit7__c</fullName>
    <label>ZTODEL_Débit 7</label>
    <summarizedField>numm__HeaderVoucher__c.numm__DebitEntiteEcritureGenerale7__c</summarizedField>
    <summaryForeignKey>numm__HeaderVoucher__c.numm__Etablissement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>