force-app/main/default/objects/numm__Establishment__c/fields/numm__eMail__c.field-meta.xml
<CustomField>
    <fullName>numm__eMail__c</fullName>
    <description>Adresse Mail</description>
    <label>Adresse Mail</label>
    <type>Email</type>
</CustomField>