force-app/main/default/objects/numm__Establishment__c/fields/numm__Entity__c.field-meta.xml
<CustomField>
    <fullName>numm__Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Entite</label>
    <referenceTo>numm__Entity__c</referenceTo>
    <relationshipLabel>Etablissements</relationshipLabel>
    <relationshipName>Etablissements1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>