force-app/main/default/objects/numm__Establishment__c/fields/numm__Etablissement_maitre__c.field-meta.xml
<CustomField>
    <fullName>numm__Etablissement_maitre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Etablissement maître</label>
    <type>Checkbox</type>
</CustomField>