force-app/main/default/objects/numm__Establishment__c/fields/numm__ExternalEstabli__c.field-meta.xml
<CustomField>
    <fullName>numm__ExternalEstabli__c</fullName>
    <externalId>true</externalId>
    <label>Code Etablissement Externe</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>