force-app/main/default/objects/numm__Establishment__c/fields/numm__Fax__c.field-meta.xml
<CustomField>
    <fullName>numm__Fax__c</fullName>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>