force-app/main/default/objects/numm__Establishment__c/fields/numm__Forme_juridique__c.field-meta.xml
<CustomField>
    <fullName>numm__Forme_juridique__c</fullName>
    <formula>numm__Entity__r.numm__LegalForm__c</formula>
    <label>Forme juridique</label>
    <type>Text</type>
</CustomField>