force-app/main/default/objects/numm__Establishment__c/fields/numm__MontantMaxAutorise__c.field-meta.xml
<CustomField>
    <fullName>numm__MontantMaxAutorise__c</fullName>
    <label>Montant Maximal autorisé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>