force-app/main/default/objects/numm__Establishment__c/fields/numm__Perte__c.field-meta.xml
<CustomField>
    <fullName>numm__Perte__c</fullName>
    <label>Perte</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>