force-app/main/default/objects/numm__Establishment__c/fields/numm__PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>numm__PhoneNumber__c</fullName>
    <description>Telephone</description>
    <label>Telephone</label>
    <type>Phone</type>
</CustomField>