force-app/main/default/objects/numm__Establishment__c/fields/numm__RegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>numm__RegistrationNumber__c</fullName>
    <description>Numero de Siret</description>
    <inlineHelpText>Saisir le numéro de Siret de l&#39;établissement, 14 caractères</inlineHelpText>
    <label>Siret</label>
    <length>14</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>