force-app/main/default/objects/numm__Establishment__c/fields/numm__Resultats__c.field-meta.xml
<CustomField>
    <fullName>numm__Resultats__c</fullName>
    <formula>0</formula>
    <label>ZTODEL_Résultats</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>