force-app/main/default/objects/numm__Establishment__c/fields/numm__Taxregime__c.field-meta.xml
<CustomField>
    <fullName>numm__Taxregime__c</fullName>
    <formula>text( numm__Entity__r.numm__TaxRegimes__c )</formula>
    <inlineHelpText>Sélectionner le régime de TVA dont bénéficie la société.</inlineHelpText>
    <label>Régime de TVA</label>
    <type>Text</type>
</CustomField>