force-app/main/default/objects/numm__Establishment__c/fields/numm__Tech_Debit__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_Debit__c</fullName>
    <label>Débit</label>
    <summarizedField>numm__HeaderVoucher__c.numm__DebitEntiteEcritureGenerale__c</summarizedField>
    <summaryForeignKey>numm__HeaderVoucher__c.numm__Etablissement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>