force-app/main/default/objects/numm__Establishment__c/fields/numm__Tech_Resultat__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_Resultat__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Use to display in cloture</description>
    <label>Tech_Resultat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>