force-app/main/default/objects/numm__Establishment__c/fields/numm__Tech_Solde7__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_Solde7__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tech_Solde7</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>