force-app/main/default/objects/numm__Establishment__c/fields/numm__TechUniciteEtaMaitre2__c.field-meta.xml
<CustomField>
    <fullName>numm__TechUniciteEtaMaitre2__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>TechUniciteEtaMaitre2</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>