force-app/main/default/objects/numm__Establishment__c/fields/numm__TechUniciteEtaMaitre__c.field-meta.xml
<CustomField>
    <fullName>numm__TechUniciteEtaMaitre__c</fullName>
    <label>TechUniciteEtaMaitre</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>