force-app/main/default/objects/numm__Establishment__c/fields/numm__TechUniciteType__c.field-meta.xml
<CustomField>
    <fullName>numm__TechUniciteType__c</fullName>
    <description>Unicité du type pour Non réparti et A repartir</description>
    <label>TechUniciteType</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>