force-app/main/default/objects/numm__Establishment__c/fields/numm__TechUniqueEtaCompte__c.field-meta.xml
<CustomField>
    <fullName>numm__TechUniqueEtaCompte__c</fullName>
    <label>TechUniqueEtaCompte</label>
    <length>100</length>
    <type>Text</type>
</CustomField>