force-app/main/default/objects/numm__Establishment__c/fields/numm__TVA_Intracommunautaire__c.field-meta.xml
<CustomField>
    <fullName>numm__TVA_Intracommunautaire__c</fullName>
    <label>TVA Intracommunautaire</label>
    <length>20</length>
    <type>Text</type>
</CustomField>