force-app/main/default/objects/numm__Establishment__c/fields/numm__TypeEtablissement__c.field-meta.xml
<CustomField>
    <fullName>numm__TypeEtablissement__c</fullName>
    <label>Type d&#39;établissement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appartement</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Proprietaire</fullName>
            </value>
            <value>
                <fullName>Non réparti</fullName>
            </value>
            <value>
                <fullName>Rompu</fullName>
            </value>
            <value>
                <fullName>A Repartir</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>