force-app/main/default/objects/numm__Establishment__c/fields/numm__Typologie__c.field-meta.xml
<CustomField>
    <fullName>numm__Typologie__c</fullName>
    <label>Typologie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DOUBLE</fullName>
            </value>
            <value>
                <fullName>DOUBLE SUP</fullName>
            </value>
            <value>
                <fullName>QUAD</fullName>
            </value>
            <value>
                <fullName>SINGLE</fullName>
            </value>
            <value>
                <fullName>TRIPLE</fullName>
            </value>
            <value>
                <fullName>TWIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>