force-app/main/default/objects/numm__Establishment__c/fields/numm__ZipCode__c.field-meta.xml
<CustomField>
    <fullName>numm__ZipCode__c</fullName>
    <description>Code Postal</description>
    <inlineHelpText>Saisir le code postal de la ville saisie</inlineHelpText>
    <label>Code Postal</label>
    <length>5</length>
    <type>Text</type>
</CustomField>