force-app/main/default/objects/numm__Establishment__c/fields/ZSaveEtaMaitre__c.field-meta.xml
<CustomField>
    <fullName>ZSaveEtaMaitre__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>ZSaveEtaMaitre</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>