force-app/main/default/objects/numm__Establishment__c/validationRules/numm__TypeEtabliObligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__TypeEtabliObligatoire</fullName>
    <active>true</active>
    <description>Le type d&#39;établissement est obligatoire si l&#39;entité gère les propriètaires</description>
    <errorConditionFormula>AND (numm__Entity__r.numm__GestionProprietaires__c,ISPICKVAL( numm__TypeEtablissement__c ,&quot;&quot;))</errorConditionFormula>
    <errorMessage>Type d&#39;établissement obligatoire</errorMessage>
</ValidationRule>